more file-ids and README.md in folders

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,9 @@
 {
+    // file:        .vscode/launch.json
+    // file-id:     872a4bd1-5d5e-45d6-846c-8b0ad924c039
+    // project:     nice123d
+    // project-id:  e2bbd03f-0ac6-41ec-89ae-2ad52fa0652a
+    //----
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
