--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+    // file:        .vscode/settings.json
+    // file-id:     2f9d9d85-22f7-4a81-a5ff-8f67dd4f4240
+    // project:     nice123d
+    // project-id:  e2bbd03f-0ac6-41ec-89ae-2ad52fa0652a
+    //----
     "cSpell.words": [
         "aggrid",
         "customizer",
