WIP: first concept for SettingsView - yaml file backend storage following the `Copied` markup with extensions to control more complex UI elements.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "pywebview",
   "rich",
   "jinja2",
+  "copier",
 ]
 description = "A nicegui-based CAD editor and viewer for OCP-based projects like build123d"
 
