--- a/.github/workflows/static_build.yml
+++ b/.github/workflows/static_build.yml
@@ -17,10 +17,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check out nice123d from github repo
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install nice123d from local folder
-      - run: uv pip install .
+        run: uv pip install .
