--- a/.github/workflows/static_build.yml
+++ b/.github/workflows/static_build.yml
@@ -6,7 +6,7 @@ name: static_build
 on: [workflow_dispatch]
 jobs:
 
-  tests:
+  builds:
     strategy:
       fail-fast: false
       matrix:
@@ -24,3 +24,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install nice123d from local folder
         run: uv pip install .
+      - name: Enumerate venv dir
+        shell: bash --login {0}
+        run: ls -lR
