--- a/.github/workflows/static_build.yml
+++ b/.github/workflows/static_build.yml
@@ -28,8 +28,8 @@ jobs:
           mkdir python_local
           tar -xzf cpython-3.12.9+20250212-x86_64-pc-windows-msvc-install_only_stripped.tar.gz -C python_local
           ls -lRa 
-          python_local/python.exe -m pip install uv
-          python_local/python.exe -m uv install .
+          python_local/python/python.exe -m pip install uv
+          python_local/python/python.exe -m uv install .
           
       # - name: Install the latest version of uv
       #   uses: astral-sh/setup-uv@v5
