FIX: Logger and traceback

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
   "jinja2",
   "copier",
   "pytest",
+  "pyperclip",
 ]
 description = "A nicegui-based CAD editor and viewer for OCP-based projects like build123d"
 
