empty concepts folder, add documentation in docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
   "copier",
   "pytest",
   "pyperclip",
+  "sphinx",
+  "sphinxcontib-mermaid",
 ]
 description = "A nicegui-based CAD editor and viewer for OCP-based projects like build123d"
 
