--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
 description = "A nicegui-based CAD editor and viewer for OCP-based projects like build123d"
 
 [tool.setuptools.packages.find]
-where = ["src/nice123d"]
+where = ["src"]
 
 [tool.black]
 target-version = ["py310", "py311", "py312", "py313"]
