--- a/.github/workflows/static_build.yml
+++ b/.github/workflows/static_build.yml
@@ -7,7 +7,16 @@ on: [workflow_dispatch]
 
 env:
   UV_INSTALL_DIR: uv
-  
+
+on:
+  push:
+    branches:
+      - main
+      - 2025-03_felix_build
+  pull_request:
+    branches:
+      - main
+      - 2025-03_felix_build
 jobs:
   builds:
     strategy:
@@ -15,7 +24,7 @@ jobs:
       matrix:
         python-version: ["3.12"]
         # os: [windows-latest]
-        os: [macos-14, ubuntu-latest, windows-latest]
+        os: [macos-13, macos-14, ubuntu-latest, windows-latest, alpine]
         # os: [macos-13, macos-14, ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
@@ -33,7 +42,19 @@ jobs:
           ls -lRa
           python_local/python/bin/python -m pip install uv
           python_local/python/bin/python -m uv pip install .
-          
+
+      - name: (archlinux) Set up Arch Linux environment
+        if: matrix.os == 'archlinux'
+        run: |
+          sudo pacman -Sy --noconfirm base-devel go python python-pip
+          mkdir python_local
+
+      - name: (alpine) Set up TinyLinux environment
+        if: matrix.os == 'alpine'
+        run: |
+          apk add --no-cache go python3 py3-pip
+          mkdir python_local
+
       - name: (mac14) Download correct python-build-standalone
         if: matrix.os == 'macos-14'
         run: |
@@ -43,6 +64,16 @@ jobs:
           tar -xzf cpython-3.12.9+20250212-aarch64-apple-darwin-install_only_stripped.tar.gz -C python_local
           pwd
           ls -lRa
+          python_local/python/bin/python -m pip install uv
+          python_local/python/bin/python -m uv pip install .
+
+      - name: (mac13) Download correct python-build-standalone
+        if: matrix.os == 'macos-13'
+        run: |
+          brew install go
+          curl -L -O https://github.com/astral-sh/python-build-standalone/releases/download/20250212/cpython-3.12.9+20250212-x86_64-apple-darwin-install_only_stripped.tar.gz
+          mkdir python_local
+          tar -xzf cpython-3.12.9+20250212-x86_64-apple-darwin-install_only_stripped.tar.gz -C python_local
           python_local/python/bin/python -m pip install uv
           python_local/python/bin/python -m uv pip install .
           
@@ -59,6 +90,15 @@ jobs:
 
       - name: (linux) Build launcher with go
         if: runner.os == 'Linux'
+        run: |
+          go version
+          cd tools/nice123d_run
+          go build -o nice123d_run main.go 
+          chmod +x nice123d_run
+          cp nice123d_run ../../python_local/
+
+      - name: (mac13) Build launcher with go
+        if: matrix.os == 'macos-13'
         run: |
           go version
           cd tools/nice123d_run
@@ -90,7 +130,23 @@ jobs:
           name: nice123d-${{ matrix.os }}
           path: ./python_local
 
-          
+      - name: (archlinux) Build launcher with go
+        if: matrix.os == 'archlinux'
+        run: |
+          go version
+          cd tools/nice123d_run
+          go build -o nice123d_run main.go 
+          chmod +x nice123d_run
+          cp nice123d_run ../../python_local/
+
+      - name: (alpine) Download correct python-build-standalone
+        if: matrix.os == 'alpine'
+        run: |
+          curl -L -O https://github.com/astral-sh/python-build-standalone/releases/download/20250212/cpython-3.12.9+20250212-x86_64-alpine-linux-install_only_stripped.tar.gz
+          tar -xzf cpython-3.12.9+20250212-x86_64-alpine-linux-install_only_stripped.tar.gz -C python_local
+          python_local/python/bin/python -m pip install uv
+          python_local/python/bin/python -m uv pip install .
+
       # ls -lRa           
       # - name: Install the latest version of uv
       #   uses: astral-sh/setup-uv@v5
